--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -26,48 +26,87 @@ Further work ground-truthing, expanding, and updating these guidelines for data 
 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
 <!-- CH comment: send this section to Ron Kadoawaki, Diana Dobson, Lauren Weir and Jim Irvine for review?-->
-<!-- CH comment: see Ron's email from 25 Oct about similarities among CUs within SMUs, in some cases but not all. see bottom of this file-->
-
-Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data, (ii) environmental drivers are also similar among CUs, .e.g, as reflected by distribution of CUs across biogeoclimatic zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local expertise. <!--CH: "Representing data deficient CUs with neighbouring data-rich CUs will likely be an exception and not rule."  WHat I meant is that for most SMus, I don't think we can use 1 CU to represent the entire SMU. However, a large number of SMUs may have at least one missing CU....???  I'm unsure where to draw the line and am considering leaving this sentence out.-->
-
-Information on **threats** may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitat, climate change, and genetic impacts from hatcheries. Data on genetic stock identification from fisheries can be used to assess similarities in vulnerability to harvest among CUs. CUs that are vulnerable to different threats may have divergent statuses and trends.
 
 
-Similarity in **environmental drivers** are reflected within biogeoclimatic zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). These units are identified at the regional level to identify geographic areas that have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon (e.g., ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northeastern BC). CUs with spawning and rearing grounds within different biogeoclimate zones may experience different macroclimates and hence environmental drivers.
+Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, .e.g, as reflected by distribution of CUs across biogeoclimatic zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. 
 
-CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, called stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each under under data deficiencies.
-
-**Habitat capacity** have....
-CUs should have similar capacities, even if CUs were strongly correlated but one was much smaller than the others, the small CU would be much more vulnerable to threats than the large CUs.   
+**Threats** are defined here is any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitat, climate change, and genetic impacts from hatcheries. SMUs are defined as groups of CUs that are managed  together with the objective of achieving a joint status, so it is likely that component CUs will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be further used to assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends. 
 
 
-Overall, our goal in this step is to identify if threats, environments, life-history characteristics and population capacities sufficiently similar among CUs such that status and trends are likely to be consistent. However, in some cases natural variability alone may result in differences in status and trends even if these criteria are met. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC (data extracted from PSE 2021),  pairwise correlations in spawner abundances among CUs within SMUs tend to be positive for  Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->).  Correlations were more variable and sometimes negative for Chinook Salmon. This meta-analysis did not apply the criteria listed above therefore may be provide correlations that are negatively biased relative to the scenario where these critieria were applied. Nevertheless, we suggest caution when representing SMU status  with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigned status of data deficient CUs based on neighboring CUs. <!-- ask Brendan which SMUs were negative to improve this guidance here-->. We also recommend further quantitative evaluation of these criteria using empirical data and in simulation.  
+Similarity in **environmental drivers** are reflected in part by biogeoclimatic zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf <!--CH: add this as URL citation-->). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northeastern BC. CUs with spawning and rearing grounds within different biogeoclimate zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"). These units are defined based on shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique unit and therefore are less useful for identifying similarity in environmental conditions among CUs.
 
-<!--CH comment: ask Diana & Ron to what extent biological information (similarity in biology, life-history, population characteristics of CUs) was used to define SMUs. The working definition of SMU is that they are groups of CUs that are managed together for similar outcomes, and does not specific that the CUs need to be similar bioloigcally -->
+To identify similarities in environmental drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive Zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadramous salmonids" (p.14). There are 12 Marine Adaptive Zones for Pacific salmon in BC and the Yukon, ranging from Bering Sea in the north to Strait of Georgia in the south (COSEWIC 2021 in prep.). Although SMUs are usually defined to be spatially cohesive and therefore to capture CUs with similar environmental conditions, SMUs sometimes span multiple biogeoglimatic zones and Marine Adaptive Zones.  
 
-
-Ideally we would use additional population level data to assess correlations.
-
-Do data exist to evaluate covariance in returns or spawner abundances among CUs in the historical record to assess the extent to which missing CUs can be represented by those with data? Are conditions similar to those in the historical record, such that covariance observed in the past is likely to still hold?
+CUs containing unique biogeoclimate zones or Marine Adaptive Zones may have divergent statuses and trends, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
 
 
+CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each under under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-These criteria are not meant to be prescriptive, but provide general guidelines for assessing possible inference for data deficient CUs. Further research evaluating the value of these criteria (and others) is warranted to better inform this step.
+CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1000 fish, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 
-If data deficient CUs do not meet the criteria for inference from remaining CUs, we recommend collection of CU-level data to inform biological assessments.
+Overall, our goal in this step is to identify if threats, environments, life-history characteristics and habitat capacities are sufficiently similar among CUs such that status and trends are likely to be consistent. In some cases natural variability alone may result in differences in status and trends even if these criteria are met. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool (PSE 2021)<!--CH: have to add ref to this URL. Add number of time-series included-->,  pairwise correlations in spawner abundances among CUs within SMUs tend to be positive for  Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->), providing some support for the use of data-rich CUs to inform those without data for those species. One caveat of this analysis is that CUs with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. In addition, the four criteria described above were not accounted for, and so correlations may be biased low. For Chinook Salmon, correlations were more variable among CUs and sometimes negative. 
+
+Overall, we suggest caution when representing SMU status  with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigned status of data deficient CUs based on neighboring CUs. <!-- ask Brendan which SMUs were negative to improve this guidance piece-->. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated by environmental zones, life-history types and management intensity, among other variables, supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
+
+If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. <!--CH: Brendan suggested interim LRPs, but I"m not sure if/when they would apply. If DD CUs don't meet the criteria above, then we should not recommend developing LRPS from remaining CUs period. If  'interim' LRPs are those from SMUs with DD CUs that do meet the above criteria, this would capture a large portion of our SMUs I think.   Do we want to call these interim LRPs if collecting data for those remote CUs isn't practical/feasible and we think they probably covary with other CUs based on our criteria?  We should prioritize collection of data for CUs that fail to meet the criteria above, over those that meet them. Perhaps we can bring this up at the next TWG mtg.-->
+
+### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
+
+The identification of serious harm is a science-based activity, independent of management processes. Given the goal of the Wild Salmon Policy to protect the biodiversity of Pacific salmon in part through the maintaining Conservation Units above lower biological benchmarks, we have identified 100% of of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs deemed extinct. Those CUs would be omitted from the total number of extant CUs within the SMU. This step does not include cost-benefit trade-offs associated with choosing which CUs to prioritize if only a portion can be conserved under growing threats, including climate change. Those analyses would require collaboration with various sectors involved in management of the SMU and decision-makers, beyond the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated under limited resources in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019).  Considerations on rebuilding potential are outside scope of identifying LRPs.
+
+Furthermore, unlike other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. There are often incongruencies between the scale of SMUs and dominant threats and management levers so that LRPs based on 100% of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention possibly using non-fisheries related levers (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100% of CUs within the SMU as serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
+
+
+
+Once LRPs are identified, then SMU-level objectives and management procedures can be evaluated in cost-benefit analyses to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100% of component CUs above the red status within an SMU is a first step in that process.
+
+
+### Assess Status Relative to Proportion-based LRP (Step 5)
+
+The status of individual CUs is assessed and the  proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4. 
+
+Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@dfoCanadaPolicyConservation2005a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than an generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
+
+Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of a Rapid Multidimensional Scanning Tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multi-dimensional assessment framework (Pestal et al. in prep). More deatils on this approach are provided in a compansion working paper (Holt et al. in prep)<!--CH: I adapted this sentence and the next sentence from the CaseStudy WP, Ch2. Also, should I refer to Ch 2 of this paper instead/in addition; Ch2 of this WP will briefly describe the approaches as well?-->
+
+While the Rapid Multidimensional Scanning Tool captures the multiple dimensions that are used to inform biological status under the WSP, we compared resulting status to a simplified approach derived from a single metric, abundances relative to a lower benchmark. In this way, we demonstrated how in most cases the Rapid Multidimensional Scanning Tool reduces to this metric. This simplified single-metric assessment is one component of the Multidimensional Scanning Tool which captures additional dimensions of status providing a more comprehensive assessment. More details are provided in a companion working paper (Holt et al. in prep).
+
+### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
+
+We recommend peer-review of the CU data and assessments used in steps 1 and 5 (if CU assessment are developed outside of an existing published, peer-reviewed process), and decisions about SMU-scale aggregation from steps 2, 3 and 4. This peer review can occur, at least in part through DFO's State of the Salmon Program's annual implementation of the Rapid Multidimenstional Scanner Tool. The Scanner Tool will be applied annually as part of of a process integrating Tool outputs with local expertise to provide provisional statuses for CUs that can be used to prioritize management efforts across the region, among other functions. Expert review is required to vet statuses derived from the implementation of the Scanner Tool to ensure they are consistent with underlying biological definitions (e.g., WSP red zone is associated with elevated risk of extinction) given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward?--> The outputs from that process can be used as a basis for developing CU-level statuses to inform SMU-level LRPs. For CUs or SMUs not included or not fully reviewed in that annual process, we recommend a separate SMU-scale peer-review process that includes assessment of component CUs and decisions about data deficiencies and CU representatives, covering steps 1-5.
+
+The frequency of SMU-scale peer reviews outside of the annual implementation of the Rapid Multidimensional Scanner Tool will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
+
+### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
+
+LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, abundances of the SMU as an aggregate and an LRP along that metric may better support for precautionary management. As aggregate abundances drop towards an LRP, fishing pressure can be gradually curtailed to avoid depletion below the LRP. The choice to develop an aggregate-abundance based LRP depends on the decision context, and would be made in collaboration with sectors responsible for decisions within the SMU. 
+
+Aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the same principles outlined in the \@ref(intro). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). Furthermore, harvest control rules that use a variety of management levers can be developed independent of aggregate-abundance based LRPs. For example, time-area closures limiting harvest on specific CUs and hatchery and habitat enhancement can be implemented to support CU-specific  objectives and achieve proportion-based LRPs regardless of aggregate abundances.
+
+If aggregate-abundance based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate-abundance based LRPs are required, and build on the proportion-based LRP derived in the previous steps. 
+
+### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
+
+Aggregate-abundance based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide a range of probabilities and their definitions adapted from likelihood scale used by the International Panel on Climate Change (IPCC ref), instead of specifying a single probability. DFO's Guidelines for the implementation of Fish Stock provisions states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]. This definition of breaching an LRP suggest a risk neutral approach to identifying serious harm, whereby risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. In our case studies, we have focused on aggregate-abundances with 50% probability of achieving proportion-based LRPs
+
+
+
+>50% probability = it is more likely that all CUs are above lower benchmarks than not
+>66% probability = “likely” that all CUs are above their lower benchmark
+>90% probability = “very likely” that all CUs are above their lower benchmark
+>99% probability = “virtually certain” that all CUs are above their lower benchmark
+
+
+For the demonstration purposes, we have simplified the CU-status assessments required in this step to abundances greater than lower benchmarks (with one exception for Interior Fraser Coho Salmon, see Holt et al in prep.). Future analyses could include status derived in the Rapid Multidimensional Scanner Tool, though we do not anticipate significant changes to our applications on case studies because status from the Rapid Multidimensional Scanner was either identical or very similar to status derived from the single metric, abundances relative to lower benchmarks.
+
+
+If yes, identity acceptable probability, 50% or higher of  all CUs1 >  lower benchmarks to avoid serious harm to the SMU. 
+1 100% or the proportion identified in step 4
+
 
 ### OLD TEXT BELOW
 
-### Proportion of CUs above lower benchmarks.
-- Default LRP
-- conditions when this might be most appropriate and not appropriate
--	General comment: when phrasing guidance, address when it is appropriate to use various methods as well as when it is NOT appropriate too use those methods
 
--	Default should be aggregate abundance associated with 100$\%$ of CUs being above their lower benchmark; however, there may be cases when a subset of CUs being below their lower benchmarks is permitted, such as where CUs are intrinsically at low levels and are not being significantly impacted by human threats such as fishing or habitat deterioration. 
--	These exceptions will need to be made on a case-by-case basis, with the rationale for these decisions well-documented.
--	Guidelines on rationale TBD
-
-While the acceptable proportion of CUs below lower benchmarks can be thought of as a trade-off decision to be made by decision-makers, LRPs are intended to be defined by Science and represent a level of serious harm. -	Question: could serious harm may mean extinction rather that in the red zone?  
 
 -	Question: could serious harm may mean extinction rather that in the red zone?  
 
@@ -75,20 +114,9 @@ While the acceptable proportion of CUs below lower benchmarks can be thought of 
 
 -if using $<$100 $\%$ of CUs $>$ red, could recommend simulation testing
 
-- Recommended process for identifying CU-level status: annual assessments through the State of the Salmon Program. For SMUs that are batched, experts can cross-check and refine information on interpretations and statuses provided by the Scanning Tool, thereby using an expert-driven process to trigger rebuilding plans
 
 
-### Multi-dimensional approach
-- similar to proportion of CUs > lower benchmark, but using other dimensions of status (e.g., trends)
-- conditions when this might be most appropriate and not appropriate
-- Maybe not appropriate as a sole mode of assessment, more as a scanning tool used to trigger more in depth assessment if MU is found to be below LRP?
 
-
-### Aggregate-abundance LRP based on aggregate data
-
-- conditions when this might be most appropriate and not appropriate
-- informed by quantitative evidence for covariance among component CUs
-- perhaps requiring simulation evaluation
 
 ### Aggregate-abundance LRP based on CU-specific data
 
@@ -155,7 +183,6 @@ Questions to provide guidance on:
 ## Time-varying parameters and impacts on LRPs
 
   
-
  There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to declines in productivity [e.g., @holtImpactTimevaryingProductivity2020,  @dornerSpatialTemporalPatterns2018, @malickRegionalScaleDeclinesProductivity2016, petermanWidespreadDecreaseProductivity2012]. In Canada, DFO assessments identified declines in productivity for various conservation units, e.g., Fraser sockeye [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @huangRecoveryPotentialAssessment2021], Southern BC Chinook (cite SAR 2016/042), Fraser Chinook (Cite RPA)  and Interior Fraser Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in log spawners per recruit [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approach [huangRecoveryPotentialAssessment2021 and RPA].
  
  Time-varying parameters affect estimates for stock recruitment reference points (e.g. $Smsy$ and $Sgen$) and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations. These effects will have an impact on the classification of CUs status. However determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g. AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020]. 
@@ -212,23 +239,4 @@ Questions to provide guidance on:
 ## Process for defining LRPs and assessing status against LRP
 - recommendation for the Science-based process (e.g., within CSAS) to develop and review LRPs for individual application, and then evaluate status against the LRP. That process would include local expertise to resolve issues of spatial resolution (CU level or other), type of LRP to be used, model structure (if model-based LRPs are considered), etc..
 
-
-<!-- Ron K.'s email from 25 Oct
-•	The current 69 SMUs are an FSP stock based evolution of the 53 Management Units (MUs) covered in the IFMP. National Sustainability Surveys were completed for 16 of these MUs.   
-•	To my knowledge, SMUs under the FSPs has not been defined beyond what you’ve indicated, “ a group of one or more WSP CUs of the same species that are managed together.” Since most fisheries are in mixed stock areas this means that most SMUs include a wide range of CUs that co-migrate and for which there is there is also a wide range of available data. I would expect that as fisheries become more precautionary and targeted in future that SMUs might contain fewer CUs.  For example, the Skeena sockeye SMU currently has 33 CUs but in future, it could be sub-divided into run timing and enhanced/wild components. 
-•	Even in the current list though there are some SMUs that are grouped by age class (Fraser chinook), run timing (Fraser sockeye) and odd-even life cycle (Fraser pink, ECVI/Mnld pink). Also, I suspect that as COSEWIC identifies DUs for sockeye, pink and chum that are more closely linked to CUs that our definition of SMUs might change in future. 
-•	As for developing LRPs for SMUs that contain some data limited CUs, I wonder if the indicator stock approach that we use in chinook and coho assessment and management might also work here. Regardless of how SMUs are defined and constructed there will always be limitations to the data that can be collected with available resources. I think that an LRP approach that recognizes and accommodates this variability in data will be very useful and should be considered. Formalizing this type of approach could also help in prioritizing data collection for work planning purposes.
-•	Finally, as far as data limited SMUs are concerned, there will be some SMUs with only qualitative indications of abundance or status as indicated in the annual Outlook document. These SMUs should probably not be prescribed in regulation unless additional data are collected, but should be managed in a very precautionary manner, e.g. longer term fishery closures.
-
-Diana's email 26 Oc
-•	At a first cut, we attempted to align SMUs to MUs that are already defined in place for implementation of the management and assessment frameworks implemented for the PST.  (We do not want to create multiple scales of organization that are not well aligned for any purpose – is inefficient and confusing (e.g. where CUs and DUs are not aligned).)  
-•	While some get caught up in the CU, SMU scale issues, it would be unfair to say SMUs have no biological basis.  Even within freshwater basins, for the most part they are geographic clusters of CUs.  (Fraser exceptions).   They are ‘managed together’ as Ron describes below BECAUSE they co-migrate.  Of course, from an ecosystem-based management point of view, ‘management’ is bigger than harvest impacts, but i) co-migration patterns would presumably result in similar marine risks/pressures and ii) SMU-scale aggregation within freshwater basins is also related to some extent to old ‘production areas’ where f/w risks/pressures may be fairly similar across CUs within the SMU at least at a high level.
-•	I agree with Ron that aggregation issues related to how to define LRPs or assess SMU status is complicated by data and there needs to be some flexibility with these evaluations.   I suppose that is a subject of the work you are up to.  i.e. How well do CU statuses correlate within an SMU?
-•	I would also add that it seems to me that you cannot consider the LRP outside the management strategy, except this is obviously complicated since the LRP is supposed to be strictly science determined.  But consider SMUs where variable CU status is accommodated in the harvest control rules through measures such as time-area closures.  In other words, the SMU has multiple removal rates.   It would be more useful for Science to evaluate whether or not the harvest control rules were likely to be effective for the lower status CUs rather than presume a single control rule ...  in fact, this is how we work with FM often…
-
-CH response
--On your last point, I agree we do need to identify a HCR that meets objectives (conservation, harvest, and socioeconomic etc.), where one of those objectives is having a low probability of dropping below an LRP (or equivalently, CU-level benchmarks). Yes, I agree the SMU can have multiple removal rates in the HCR that are set to achieve objectives. 
--And the choice of the HCR is species, stock, context-specific. Although our paper does not develop or evaluate those HCRs, that is certainly a next step that we will highlight.
-
--->
 
