--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -11,7 +11,7 @@
   doi = {10.1080/23308249.2021.1972086},
   abstract = {Management of anadromous salmon stocks is usually based on an estimate of the spawner-recruitment relationship. A wide variety of estimation approaches have been developed, from simple to complex, and some worthwhile methodologies and auxiliary data are underutilized. The types and quality of the data available determine the most appropriate assessment methodology and the reliability of the assessment results. The management strategies available and the performance of these strategies are likewise highly dependent on the available data. This review gives an overview of the range of assessment methodologies, from the ad-hoc to hierarchical Bayesian state-space approaches. It emphasizes the central role of data; data types, data deficiencies, auxiliary information such as environmental indices, habitat characteristics, and similar stocks, and the effects of the data on the quality of guidance to managers.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\6X7EDNPL\\Adkison - 2021 - A Review of Salmon Spawner-Recruitment Analysis T.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\6X7EDNPL\\Adkison - 2021 - A Review of Salmon Spawner-Recruitment Analysis T.pdf}
 }
 
 @article{arbeiderInteriorFraserCoho2020,
@@ -37,7 +37,7 @@
   doi = {10.1139/f99-281},
   abstract = {We describe a simple scheme for the management of coho salmon (Oncorhynchus kisutch) population aggregates that uses reference points derived from an empirical analysis of freshwater production data. We fit a rectilinear "hockey stick" model to 14 historical data sets of female spawner abundance and resulting smolt production and found that at low spawner abundance, the average productivity was about 85 smolts per female spawner. Variation in productivity among streams may be related to the quality of the stream habitat. We show how freshwater productivity can be combined with forecasts of marine survival to provide a limit reference point harvest rate. Our method will permit harvest rates to track changes in ocean productivity. We also used the historical data to estimate that, on average, a density of 19 female spawners{$\cdot$}km               -1               is required to fully seed freshwater habitats with juveniles. However, there was considerable variation among the streams that might limit the utility of this measure as a reference point. Uncertainty in the forecasts of marine survival and other parameters needs to be incorporated into our scheme before it can be considered a precautionary approach.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\FKWQWWB7\\Bradford et al. - 2000 - Reference points for coho salmon ( iOncorhynchus.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\FKWQWWB7\\Bradford et al. - 2000 - Reference points for coho salmon ( iOncorhynchus.pdf}
 }
 
 @techreport{bradfordStatusCultusLake2010,
@@ -57,7 +57,7 @@
   number = {Can. Tech. Rep. Fish. Aquat. Sci. 3401},
   pages = {214},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf}
 }
 
 @techreport{canadaHarvestStrategyCompliant2006,
@@ -66,6 +66,23 @@
   year = {2006},
   number = {2006/023},
   institution = {{Fisheries and Oceans Canada}}
+}
+
+@article{carwardinePriorityThreatManagement2019,
+  title = {Priority {{Threat Management}} for Biodiversity Conservation: A Handbook},
+  shorttitle = {Priority {{Threat Management}} for Biodiversity Conservation},
+  author = {Carwardine, Josie and Martin, Tara G. and Firn, Jennifer and Reyes, Rocio Ponce and Nicol, Sam and Reeson, Andrew and Grantham, Hedley S. and Stratford, Danial and Kehoe, Laura and Chad{\`e}s, Iadine},
+  editor = {Lee, Tien Ming},
+  year = {2019},
+  month = feb,
+  journal = {Journal of Applied Ecology},
+  volume = {56},
+  number = {2},
+  pages = {481--490},
+  issn = {0021-8901, 1365-2664},
+  doi = {10.1111/1365-2664.13268},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5NCHAIEA\\Carwardine et al. - 2019 - Priority Threat Management for biodiversity conser.pdf}
 }
 
 @techreport{chaputConsiderationsDefiningReference2012,
@@ -77,7 +94,7 @@
   pages = {v + 48},
   abstract = {The document was prepared in support of an advisory process meeting to produce a technical guidance document to assist science practitioners responsible for developing the science elements of the Precautionary Approach (PA) framework. It reviews the use of reference points in the assessment and management of semelparous species and anadromous salmonids including iteroparous salmon. Semelparous species and anadromous salmonids are treated collectively and separately from other aquatic species because they share a number of life history and population dynamic characteristics which are distinct from those of other aquatic organisms. In British Columbia and Yukon, the Wild Salmon Policy (WSP) guides the implementation of the precautionary approach in the management of fisheries on Pacific salmon. In the WSP, biological benchmarks are developed for four main classes of indicators: trends in abundance, abundance, fishing mortality, and spawning ground distribution as data permits. These indicators are further integrated into a single category of biological status. There are no management actions which are associated directly with a given status or benchmark. Rather, the biological benchmarks aid in the development of fishery reference points along with socio-economic factors and issues related to risk tolerance. Reference points for Atlantic salmon have been used to advise fisheries management since the 1970s. The use of a conservation objective defined as a limit reference point and the fixed escapement strategy has been adopted in Canada, by national governments in Europe and by international organisations. Candidate fishery reference points and WSP benchmarks are similar to the general list of reference points proposed in a number of publications for other species. Stock and recruitment models have a long and established history in Pacific and Atlantic salmon stock assessment and provision of science advice for fisheries management. Empirical methods consisting of life history models that use life history process parameters borrowed from a large range of studies on the species of interest are considered. In data limited situations for unstudied populations but for which information exists from other populations, reference points are frequently transported based on values from studied populations which are standardized using an exchangeable and transportable metric.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\3AVX36CQ\\Chaput et al. - Considerations for defining reference points for s.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\3AVX36CQ\\Chaput et al. - Considerations for defining reference points for s.pdf}
 }
 
 @article{chaputConsiderationsDefiningReference2015,
@@ -87,7 +104,7 @@
   volume = {2015/074},
   pages = {49},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\KFDH5KB5\\Chaput - Considerations for defining reference points for A.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KFDH5KB5\\Chaput - Considerations for defining reference points for A.pdf}
 }
 
 @article{cookFrameworkAssessmentOffshore2017,
@@ -96,10 +113,10 @@
   year = {2017},
   pages = {194},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
 }
 
-@techreport{dfoCanadaPolicyConservation2005,
+@techreport{dfoCanadaPolicyConservation2005a,
   title = {Canada's Policy for Conservation of Wild {{Pacific}} Salmon},
   year = {2005},
   address = {{Vancouver}},
@@ -109,7 +126,19 @@
   lccn = {SH346 .C35 2005},
   keywords = {Canada,Conservation Government policy,Pacific salmon},
   annotation = {OCLC: ocm61863454},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
+}
+
+@article{dfoGuidanceAssessingThreats2014,
+  title = {Guidance on {{Assessing Threats}}, {{Ecological Risk}} and {{Ecological Impacts}} for {{Species}} at {{Risk}}},
+  author = {DFO},
+  year = {2014},
+  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume = {2014/013 (Erratum: June 2016)},
+  pages = {21},
+  abstract = {Threat Assessment \textbullet{} For species assessed as Extirpated, Endangered or Threatened by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), the assessment and prioritization of threats to survival and/or recovery of the species needs to be provided in the Recovery Potential Assessment (RPA).},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5YMKZMTN\\Guidance on Assessing Threats, Ecological Risk and.pdf}
 }
 
 @techreport{dfoHarvestStrategyCompliant2006,
@@ -128,6 +157,18 @@
   langid = {english}
 }
 
+@article{dfoScienceGuidelinesSupport2021,
+  title = {Science {{Guidelines}} to {{Support Development}} of {{Rebuilding Plans}} for {{Canadian Fish Stocks}}},
+  author = {DFO},
+  year = {2021},
+  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume = {2021/006},
+  pages = {20},
+  abstract = {Under the revised Fisheries Act a rebuilding plan is required when a stock falls to or below its Limit Reference Point (LRP). The LRP should be avoided with high probability to reduce the risk of serious harm and management actions to prevent further decline in stock status should be implemented before this point is reached.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\9VXDG27S\\Science Guidelines to Support Development of Rebui.pdf}
+}
+
 @article{dfoWildSalmonPolicy2015,
   title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}})},
   author = {DFO},
@@ -137,7 +178,7 @@
   pages = {12},
   abstract = {The Wild Salmon Policy (WSP) outlines Fisheries and Oceans Canada's (DFO) strategies for managing Canada's salmon resources. The status assessment (Strategy 1) involves developing benchmarks and determining the biological status of Conservation Units (CUs).},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\7HP2LMEW\\Wild salmon policy biological status assessment fo.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\7HP2LMEW\\Wild salmon policy biological status assessment fo.pdf}
 }
 
 @article{dornerSpatialTemporalPatterns2018,
@@ -153,7 +194,7 @@
   doi = {10.1139/cjfas-2017-0197},
   abstract = {We expand on previous analyses of environmental factors related to productivity of Chinook salmon (Oncorhynchus tshawytscha) populations by analysing data on adult recruits per spawner from 24 wild (not hatchery) Chinook salmon stocks from Oregon through western Alaska. To determine the degree to which changes in productivity are shared and to help identify environmental variables that might be related to those changes, we estimated the magnitude and spatial characteristics of positive correlations in productivity trends among stocks separated by various distances. We used dynamic factor analysis to characterize shared time trends in productivity and found that these trends were most closely associated with the North Pacific Gyre Oscillation and, to a lesser extent, with the location of the bifurcation in the North Pacific Current as it reaches North America's west coast. Chinook productivity patterns of separate populations have also become more synchronous in recent years, similar to results reported for other species of Pacific salmon. Such recent changes may reduce the resilience of the species to effects of climate change and habitat modification.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\DXS693GP\\Dorner et al. - 2018 - Spatial and temporal patterns of covariation in pr.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\DXS693GP\\Dorner et al. - 2018 - Spatial and temporal patterns of covariation in pr.pdf}
 }
 
 @article{dowlingEmpiricalHarvestStrategies2015,
@@ -168,7 +209,7 @@
   issn = {01657836},
   doi = {10.1016/j.fishres.2014.11.005},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\BT3KTNQI\\Dowling et al. - 2015 - Empirical harvest strategies for data-poor fisheri.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\BT3KTNQI\\Dowling et al. - 2015 - Empirical harvest strategies for data-poor fisheri.pdf}
 }
 
 @article{edwardsPacificOceanPerch2014,
@@ -178,7 +219,7 @@
   volume = {2013/092},
   pages = {132},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\YATXENNJ\\Edwards et al. - Pacific Ocean Perch (Sebastes alutus) stock assess.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\YATXENNJ\\Edwards et al. - Pacific Ocean Perch (Sebastes alutus) stock assess.pdf}
 }
 
 @article{francisDataWeightingStatistical2011,
@@ -195,7 +236,7 @@
   doi = {10.1139/f2011-025},
   abstract = {The conclusions drawn from fisheries stock assessment models can depend strongly on the relative weights assigned to different data sets. However, there is no consensus amongst practitioners as to the best approach to data weighting. From a discussion of some key questions concerning data weighting in stock assessment models, I draw three guiding principles: (i) do not let other data stop the model from fitting abundance data well; (ii) when weighting age or length composition data, allow for correlations; and (iii) do not down-weight abundance data because they may be unrepresentative. I propose an approach to data weighting based on these principles. Two factors that complicate this approach are that some decisions are inevitably subjective (which underlines the need for expert knowledge in stock assessment), and some technical problems are unresolved.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\5A3N74P6\\Francis - 2011 - Data weighting in statistical fisheries stock asse.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5A3N74P6\\Francis - 2011 - Data weighting in statistical fisheries stock asse.pdf}
 }
 
 @techreport{godboutStockStatusWild2004,
@@ -208,6 +249,15 @@
   abstract = {We describe the status of six main chum salmon stock groupings from the Central Coast and the southern non-Fraser Inner Study Area (ISA). The first four correspond to the chum returning to Statistical Areas 7, 8, 9, and 10 and are referred as ``northern stocks''. The fifth stock is those fish returning to Area 11 (Seymour Inlet). The sixth stock comprises fish spawning in the ISA (Johnstone and Georgia straits) but excludes fish from the Fraser River. Our overall goal was to assess the status of these stocks and describe how status varied temporally between 1953- 2002. Status was based primarily on trends in escapement as well as a comparison of escapement to reference points. We calculated two reference points based on the long-term median escapement (LTME) that defined three zones (red:{$\leq$} 60\% LTME, amber:{$>$}60 \% LTME {$<$} escapement {$<$} 80\%LTME, and green: {$\geq$} 80\%LTME). We performed a similar analysis using total run sizes. Status variability within stock groupings was assessed by calculating and comparing relative rates of change in escapement per year for individual streams. Temporal variations in stock status were analysed by evaluating the stock status based on the complete time series and based on data from the last three generations only. Chum salmon in Areas 7 and 8 were generally in the green zone. While there are no apparent management concerns with these fish, we recommend that Area 7 chum should be monitored closely since total run size appears to have been reduced by \textasciitilde 22\% during the last three generations. We have some concerns for chum returning to Areas 9-11, and north-eastern Johnstone Strait (EJST). Although long and short-term trends in escapements to Area 9 were not negative, the median escapement and total run size during the last three generations were in the amber zone. Escapements in Area 10 showed a negative trend during the last three generations, although the median escapement was in the green zone. Inefficient escapement surveys during the last 3 generations might be responsible for this apparent decline in escapement. Escapements in Area 11 declined over time, and the median of the last three generations was in the amber zone while total run size was in the green zone. There was significant variability in patterns for the southern stocks. Stocks on both sides of Johnstone Strait have declined recently. The decline of the Eastern stock was the most drastic of all; recent escapements and total run sizes were in the red zones, both being reduced to less than half their long-term median. Interestingly, chum in North West Georgia Strait (NWGS) increased during the last three generations; escapements and total run size generally were in the green zone. This increase may be related to changing fishery practices on enhanced chum returning to this area. Chum returning to NEGS, SWGS, and SEGS had similar patterns to each other. All Georgia Strait stocks increased during the complete time series and during the last generations and were in the green zone.}
 }
 
+@article{grant2017FraserSockeye2020,
+  title = {The 2017 {{Fraser Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Integrated Biological Status Re}}-{{Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
+  author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
+  year = {2020},
+  pages = {218},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SU9UFFYK\\Grant et al. - The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf}
+}
+
 @article{grantEvaluationUncertaintyFraser2011,
   title = {Evaluation of Uncertainty in {{Fraser}} Sockeye {{WSP Status}} Using Abundance and Trends in Abundance Metrics},
   author = {Grant, S C H and MacDonald, B L and Cone, T E and Holt, C A and Cass, A and Porszt, E J and Hume, J M B and Pon, L B},
@@ -215,7 +265,7 @@
   volume = {2011/087},
   pages = {191},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\D77FWHXS\\Grant et al. - Évaluation de l’incertitude de la situation de la .pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\D77FWHXS\\Grant et al. - Évaluation de l’incertitude de la situation de la .pdf}
 }
 
 @article{grantIntegratedBiologicalStatus2013,
@@ -226,7 +276,7 @@
   pages = {137},
   abstract = {The 24 Fraser Sockeye Conservation Units (CUs) were used as case studies to explore methods of status integration for Strategy 1 of the Wild Salmon Policy (WSP): Standardized Monitoring of Wild Salmon Status. Although most of these Fraser Sockeye case studies represent data rich CUs in the Pacific Region, with long time series of stock-recruitment data, a few CUs are also data limited (e.g. Chilliwack-ES only has some recent spawner abundance data).},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\LXSEPKP4\\Grant and Pestal - Évaluation de l'état biologique intégré en vertu d.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\LXSEPKP4\\Grant and Pestal - Évaluation de l'état biologique intégré en vertu d.pdf}
 }
 
 @techreport{holtbyConservationUnitsPacific2007,
@@ -237,7 +287,7 @@
   number = {2007/070},
   pages = {358},
   institution = {{Fisheries and Oceans Canada}},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
 }
 
 @techreport{holtEvaluationBenchmarksConservation2009,
@@ -249,7 +299,7 @@
   pages = {x + 50},
   abstract = {Canada's Wild Salmon Policy requires that quantifiable metrics of biological status and benchmarks along those metrics that delineate Red, Amber, and Green zones of status be established for all Conservation Units. Although candidate benchmarks have been identified from the scientific literature and previous management experience, they have not been evaluated in terms of their ability to meet the goals of the Wild Salmon Policy. Using a simulation model, we evaluated lower benchmarks on two classes of indicators (abundances and fishing mortality relative to productivity) on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. This technical document provides the methodology and results for those analyses and is a companion document to the overall synthesis paper "Indicators of Status and Benchmarks for Conservation Units in Canada's Wild Salmon Policy" (Holt et al. 2009). We considered the "worst-case" management scenario, with management decisions corresponding to CUs being depleted to the lower benchmark each year. Although unrealistic, this assumption provides an upper limit on the probability of extirpation and lower limit on the probability of recovery. We found that for metrics of spawner abundances, the lower benchmark, spawner abundance that will result in recovery to SMSY (spawner abundance at maximum sustained yield) in one generation under equilibrium conditions (Sgen), was associated with a relatively low probability of extirpation (probability {$<$}25\%) over 100 years (for populations with equilibrium abundances {$>$} 15 000 spawners) and high probability of recovery to SMSY within three generations (probability {$>$}75\%) when uncertainties in all major components of the fishery system were accounted for. Furthermore, the probability of extirpation for Sgen was more robust to variability in stock productivity compared with benchmarks calculated from proportions of SMSY. For metrics of fishing mortality, the lower benchmark FMSY (fishing mortality at maximum sustained yield) was associated with a relatively low probability of extirpation (probability {$<$}25\%) over 100 years for populations with equilibrium abundances {$>$} 30 000 spawners, and high probability of recovery to SMSY within three generations (probability {$>$}75\%), and its performance was more robust to variability in stock productivity than other benchmarks on fishing mortality derived from the scientific literature. Based on those results and a risk classification scheme developed in DFO's Fishery Decision-Making Framework Incorporating the Precautionary Approach (2009), we suggest deriving lower benchmarks on spawner abundances from Sgen and lower benchmarks on fishing mortality from FMSY. Further work will be required to identify specific risk tolerances of stakeholders in order to better inform the choice of lower benchmarks.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\RZXRKCBV\\Holt - Évaluation des points de repère servant à évaluer .pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\RZXRKCBV\\Holt - Évaluation des points de repère servant à évaluer .pdf}
 }
 
 @article{holtImpactTimevaryingProductivity2020,
@@ -260,14 +310,14 @@
   volume = {InPress}
 }
 
-@article{holtIndicatorsStatusBenchmarks2009,
+@article{holtIndicatorsStatusBenchmarks2009a,
   title = {Indicators of {{Status}} and {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}},
   author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
   year = {2009},
   pages = {82},
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
 }
 
 @book{huangRecoveryPotentialAssessment2021,
@@ -278,7 +328,7 @@
   isbn = {978-0-660-38745-1},
   langid = {english},
   annotation = {OCLC: 1260853250},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
 }
 
 @article{kronlundConsiderationsDesignRebuilding2021,
@@ -287,17 +337,17 @@
   year = {2021},
   langid = {english},
   annotation = {OCLC: 1266173370},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\J4E6YQNK\\Kronlund et al. - 2021 - Considerations for the design of rebuilding strate.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\J4E6YQNK\\Kronlund et al. - 2021 - Considerations for the design of rebuilding strate.pdf}
 }
 
 @article{kronlundSelectionRoleLimit2018,
   title = {The {{Selection}} and {{Role}} of {{Limit Reference Points}} for {{Pacific Herring}} ({{{\emph{Clupea}}}}{\emph{ Pallasii}}) in {{British Columbia}}, {{Canada}}},
-  author = {Kronlund, A. R. and Forrest, R. E. and Cleary, J. S. and Grinnell, M. H.},
+  author = {Kronlund, A. R. and Forrest, R. E. and Cleary, J. S. and Grinnell, M. H. and Grinnell, M H},
   year = {2018},
   volume = {2018/009},
   pages = {134},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\9S8G3XYS\\Kronl et al. - The Selection and Role of Limit Reference Points f.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\9S8G3XYS\\Kronl et al. - The Selection and Role of Limit Reference Points f.pdf}
 }
 
 @article{kvamsdalHarvestControlRules2016,
@@ -311,7 +361,7 @@
   issn = {2325-1026},
   doi = {10.12952/journal.elementa.000114},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\Z2FEH4G7\\37_326_1_SM.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\Z2FEH4G7\\37_326_1_SM.pdf}
 }
 
 @article{malickRegionalScaleDeclinesProductivity2016,
@@ -327,7 +377,7 @@
   issn = {1932-6203},
   doi = {10.1371/journal.pone.0146009},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\747SR8QZ\\Malick and Cox - 2016 - Regional-Scale Declines in Productivity of Pink an.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\747SR8QZ\\Malick and Cox - 2016 - Regional-Scale Declines in Productivity of Pink an.pdf}
 }
 
 @article{marentetteSpecificationPrecautionaryApproach2021,
@@ -336,7 +386,7 @@
   year = {2021},
   pages = {105},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\FK4GYX9L\\Marentette et al. - Specification of Precautionary Approach Reference .pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\FK4GYX9L\\Marentette et al. - Specification of Precautionary Approach Reference .pdf}
 }
 
 @article{mullowneyBasisPrecautionaryApproach2018,
@@ -346,7 +396,7 @@
   volume = {2018/054},
   pages = {70},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\3J2546ZW\\Mullowney et al. - Basis for A Precautionary Approach and Decision Ma.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\3J2546ZW\\Mullowney et al. - Basis for A Precautionary Approach and Decision Ma.pdf}
 }
 
 @article{pestalUpdatedMethodsAssessing2012,
@@ -356,7 +406,7 @@
   volume = {2011/133},
   pages = {182},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\3UUWMDJ4\\Pestal et al. - Méthodes mises à jour pour l’évaluation des règles.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\3UUWMDJ4\\Pestal et al. - Méthodes mises à jour pour l’évaluation des règles.pdf}
 }
 
 @article{petermanWidespreadDecreaseProductivity2012,
@@ -384,7 +434,7 @@
   doi = {10.1080/02755947.2014.882453},
   abstract = {Limit reference points'' define a state at which fishery management has reached overfishing, overfished stock status, or some other regulatory or conservation point of concern. In many Pacific salmon Oncorhynchus spp. fishery jurisdictions, management only uses ``target reference points''\textemdash the specific numerical management objective intended to bring about some fishery benefit. There are several reasons to adopt limit reference points, and jurisdictions without previously defined limit reference points could adopt them in order to align better with the Magnuson\textendash Stevens Act (American fisheries) or, more importantly, to facilitate cross-jurisdiction sustainability assessments, which are increasingly needed for certifications of sustainability. In actual practice, the stock size of 0.5 times a target reference point has been used as a limit reference point for some Pacific salmon fisheries, or at least as a proxy for a limit reference point. We term this point the ``minimum stock size threshold,'' following a convention already in use, and we note that limit reference points defined this way are increasingly being accepted as a standard either because of justification based on simulation and fishery principles or for purely pragmatic reasons.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\F69BSGJP\\Portley and Geiger - 2014 - Limit Reference Points for Pacific Salmon Fisherie.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\F69BSGJP\\Portley and Geiger - 2014 - Limit Reference Points for Pacific Salmon Fisherie.pdf}
 }
 
 @incollection{puntHarvestControlRules2010,
@@ -421,7 +471,7 @@
   doi = {10.1093/icesjms/fsaa176},
   abstract = {Stock\textendash recruitment relationships (SRRs) may vary over time due to ecological and anthropogenic impacts, challenging traditional approaches of calculating maximum sustainable yield (MSY)-based reference points that assume constant population traits. We compare seven methods to calculate MSY, FMSY and BMSY by modelling constant, stochastic (uncorrelated), and autocorrelated SRRs using simulations and two case studies [Atlantic cod (Gadus morhua) and American plaice (Hippoglossoides platessoides) on the Grand Bank off Newfoundland, Canada]. Results indicated that the method used to model SRRs strongly affected the temporal pattern of recruitment projection, and the variations generated by autocorrelated SRRs were more similar to observed patterns. When the population productivity had low-frequency and largemagnitude variations, stochastic SRRs generated greater MSY and FMSY estimates than constant or autocorrelated SRRs, while no consistent pattern of BMSY was detected. In the case studies, stochastic and autocorrelated SRRs produced asymmetric relationships between fishing mortality and yield, with higher risk of overfishing by going beyond FMSY. Overall, our results suggest that caution should be taken when calculating MSY-based reference points in highly dynamic ecosystems, and correctly accounting for non-stationary population dynamics could, therefore, lead to more sustainable fisheries.},
   langid = {english},
-  file = {C\:\\Users\\worc\\Zotero\\storage\\79236HY9\\Zhang et al. - 2021 - Accounting for non-stationary stock–recruitment re.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\79236HY9\\Zhang et al. - 2021 - Accounting for non-stationary stock–recruitment re.pdf}
 }
 
 
